[project]
name = "jwti"
version = "0.1.2"
authors = [
  { name="Juan Fox"},
]
description = "JWTI is a JWT inspector tool."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "pyjwt>=2.12.1",
    "rich>=14.3.4",
    "typer>=0.24.2",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pyinstaller==6.20.0",
    "pyright==1.1.409",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.15.12",
]

[tool.setuptools]
packages = ["jwti"]

[project.urls]
"Homepage" = "https://github.com/juannfox/jwti"

# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.uv.sources]
jwti = { workspace = true }
